Latests updates and parent
This is still under-tested and may not actually do what
is needed.  I'm expecting to have to go to 0.30.x before
this is really stabilized.  Don't use ibcore-read-detect
for anything useful.